# chess-scoresheet-digitization-training

./: .env.sample  .gitignore  LICENSE  README.md  images_push_to_dockerhub.sh  metadata.yaml  pyproject.toml  requirements.txt  run_deployment.py  run_inference.py  run_log_and_register_model_pipeline.py
data/datasets/processed_hcs/: dataset_info.json  state.json
data/datasets/unprocessed_hcs/: dataset_info.json  state.json
data/raw_data/hsssd_data/: ground_truth_labels.csv
data/raw_data/processed_hcs_data/: char_table.txt  func_training_tags.txt  train_data.txt  val_data.txt
notebooks/: train-trocr-on-handwritten-chess-notation.ipynb  uat_changed_hcs_data.ipynb  uat_ingest_data_strategy.ipynb
results/: tuning_history_2025-05-09_22-19-10.csv
src/scripts/: deployment_pipeline.py  evaluation_graphs.py  hyperparameter_util.py  manual_tuning_preprocessing_strategy.py  model_module.py  postprocessing_strategy.py  preprocessing_hyperparameter_tuning.py  run_deployment.py  run_deployment_pipeline.py  run_log_and_register_model_pipeline.py  run_tracking_model_pipeline.py  run_training_pipeline.py  trainer_module.py
src/scripts/data_to_hf/: image_files_to_dataset_strategy.py  images_to_hf_dataset.py  main.py  test_image_files_to_dataset_strategy.py
src/scripts/mlflow_pyfunc_models/: trocr_mlflow_model.py
src/scripts/pipelines/: deployment_pipeline.py  inference_pipeline.py  tracking_model_pipeline.py  training_pipeline.py
src/scripts/scripts_for_steps/: data_loader_strategy.py  data_module.py  evaluation_graphs.py  (+8 more)
src/tests/: test_data_loader_strategy.py  test_data_module.py  test_data_splitter_strategy.py  test_ingest_data_strategy.py  test_preprocessing_strategy.py
(+30 files in other folders)
