[tool.poetry]
name = "chess-scoresheet-digitization-training"
version = "0.0.1"
description = ""
authors = ["Benjamin Kostka mail@ben-kostka.de"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
pytest = "*"
fastapi = "*"
uvicorn = "*"
python-multipart = "*"
aiofiles = "*"
mlflow = "2.21.2"
mlflow_skinny = "2.21.2"
numpy = "*"
opencv-python = "*"
pandas = "*"
starlette = "*"
dagshub = "0.6.2"
datasets = "*"
transformers = "4.54.0"
seaborn = "*"
ibm_watson_machine_learning = "*"
pre-commit = "*"
matplotlib = "*"
joblib = "*"
pyyaml = "*"
torch = "2.7.1"
dotenv = "*"
notebook = "^7.4.4"
ipywidgets = "^8.1.7"
accelerate = "1.9.0"
jiwer = "4.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
